Semant/ReadAbsyn.java
/* Generated By:JavaCC: Do not edit this line. ReadAbsyn.java */
package Semant;
import java.util.LinkedList;
public class ReadAbsyn implements ReadAbsynConstants {

/**************************************************
 * The MiniJava language grammar starts here      *
 **************************************************/

//Program(AbstractList<ClassDecl> classes)
  static final public Semant.Absyn.Program Program() throws ParseException {
    LinkedList<Semant.Absyn.ClassDecl> cl = new LinkedList<Semant.Absyn.ClassDecl>();
    jj_consume_token(42);
    jj_consume_token(6);
    jj_consume_token(58);
    jj_consume_token(6);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
      case 47:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 19:
        ClassDecl(cl);
        break;
      case 47:
        ThreadDecl(cl);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(7);
    jj_consume_token(7);
    jj_consume_token(0);
      {if (true) return new Semant.Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
  }

//ClassDecl(String name, String parent, LinkedList<VarDecl> fields, LinkedList<MethodDecl> methods)
  static final public void ClassDecl(LinkedList<Semant.Absyn.ClassDecl> cl) throws ParseException {
        Token name = null, parent = null;
        String parentName;
        LinkedList<Semant.Absyn.VarDecl> vl = new LinkedList<Semant.Absyn.VarDecl>();
        LinkedList<Semant.Absyn.MethodDecl> ml = new LinkedList<Semant.Absyn.MethodDecl>();
    jj_consume_token(19);
    jj_consume_token(6);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 59:
      jj_consume_token(59);
      break;
    case ID:
      parent = jj_consume_token(ID);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(58);
    jj_consume_token(6);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      VarDecl(vl);
    }
    jj_consume_token(7);
    jj_consume_token(58);
    jj_consume_token(6);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      MethodDecl(ml);
    }
    jj_consume_token(7);
    jj_consume_token(7);
                if (null == parent) parentName = null;
                else parentName = parent.toString();
                cl.add(new Semant.Absyn.ClassDecl(name.toString(), parentName, vl, ml));
  }

//ThreadDecl(String name, LinkedList<VarDecl> fields, LinkedList<MethodDecl> methods)
  static final public void ThreadDecl(LinkedList<Semant.Absyn.ClassDecl> cl) throws ParseException {
        Token name = null;
        LinkedList<Semant.Absyn.VarDecl> vl = new LinkedList<Semant.Absyn.VarDecl>();
        LinkedList<Semant.Absyn.MethodDecl> ml = new LinkedList<Semant.Absyn.MethodDecl>();
    jj_consume_token(47);
    jj_consume_token(6);
    name = jj_consume_token(ID);
    jj_consume_token(56);
    jj_consume_token(58);
    jj_consume_token(6);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      VarDecl(vl);
    }
    jj_consume_token(7);
    jj_consume_token(58);
    jj_consume_token(6);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
      case 51:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 33:
        MethodDecl(ml);
        break;
      case 51:
        VoidDecl(ml);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(7);
    jj_consume_token(7);
                cl.add(new Semant.Absyn.ThreadDecl(name.toString(), vl, ml));
  }

//MethodDecl(Type returnType, String name,
//		      LinkedList<Formal> params,
//		      LinkedList<VarDecl> locals,
//		      LinkedList<Stmt> stmts,
//		      Expr returnVal)
  static final public void MethodDecl(LinkedList<Semant.Absyn.MethodDecl> ml) throws ParseException {
        Semant.Absyn.Type type = null;
        Token name;
        Semant.Absyn.Formal  param = null;
        Semant.Absyn.Stmt    stmt  = null;
        Semant.Absyn.Expr    expr  = null;
        boolean sync = false;
        LinkedList<Semant.Absyn.Formal> params   = new LinkedList<Semant.Absyn.Formal>();
        LinkedList<Semant.Absyn.VarDecl> locals  = new LinkedList<Semant.Absyn.VarDecl>();
        LinkedList<Semant.Absyn.Stmt> stmts      = new LinkedList<Semant.Absyn.Stmt>();
    jj_consume_token(33);
    jj_consume_token(6);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 55:
      jj_consume_token(55);
      break;
    case 12:
    case 17:
    case 28:
    case 31:
      type = Type();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 57:
      jj_consume_token(57);
                            sync = true;
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    name = jj_consume_token(ID);
    jj_consume_token(58);
    jj_consume_token(6);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 25:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_6;
      }
      param = Formal();
                                                     params.add(param);
    }
    jj_consume_token(7);
    jj_consume_token(58);
    jj_consume_token(6);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      VarDecl(locals);
    }
    jj_consume_token(7);
    jj_consume_token(58);
    jj_consume_token(6);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 16:
      case 29:
      case 52:
      case 54:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      stmt = Stmt();
                                                   stmts.add(stmt);
    }
    jj_consume_token(7);
    expr = Expr();
    jj_consume_token(7);
                  ml.add(new Semant.Absyn.MethodDecl(type, sync, name.toString(),
                                            params, locals, stmts, expr));
  }

//VoidDecl(String name,
//		      LinkedList<VarDecl> locals,
//		      LinkedList<Stmt> stmts)
  static final public void VoidDecl(LinkedList<Semant.Absyn.MethodDecl> ml) throws ParseException {
        Token name;
        Semant.Absyn.Stmt    stmt  = null;
        LinkedList<Semant.Absyn.VarDecl> locals  = new LinkedList<Semant.Absyn.VarDecl>();
        LinkedList<Semant.Absyn.Stmt> stmts      = new LinkedList<Semant.Absyn.Stmt>();
    jj_consume_token(51);
    jj_consume_token(6);
    name = jj_consume_token(ID);
    jj_consume_token(58);
    jj_consume_token(6);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_9;
      }
      VarDecl(locals);
    }
    jj_consume_token(7);
    jj_consume_token(58);
    jj_consume_token(6);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 14:
      case 16:
      case 29:
      case 52:
      case 54:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_10;
      }
      stmt = Stmt();
                                                   stmts.add(stmt);
    }
    jj_consume_token(7);
    jj_consume_token(7);
          ml.add(new Semant.Absyn.VoidDecl(name.toString(), locals, stmts));
  }

//Formal(Type type, String name)
  static final public Semant.Absyn.Formal Formal() throws ParseException {
        Semant.Absyn.Type type;
        Token name;
    jj_consume_token(25);
    jj_consume_token(6);
    type = Type();
    name = jj_consume_token(ID);
    jj_consume_token(7);
          {if (true) return new Semant.Absyn.Formal(type, name.image);}
    throw new Error("Missing return statement in function");
  }

//VarDecl(Type type, String name, Expr init)
  static final public void VarDecl(LinkedList<Semant.Absyn.VarDecl> vl) throws ParseException {
        Semant.Absyn.Type type;
        Token name;
        Semant.Absyn.Expr init = null;
    jj_consume_token(50);
    jj_consume_token(6);
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 59:
      jj_consume_token(59);
      break;
    case 9:
    case 10:
    case 11:
    case 18:
    case 20:
    case 21:
    case 23:
    case 24:
    case 26:
    case 27:
    case 30:
    case 32:
    case 34:
    case 35:
    case 36:
    case 37:
    case 38:
    case 39:
    case 40:
    case 41:
    case 44:
    case 45:
    case 46:
    case 48:
    case 53:
      init = Expr();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(7);
        //TODO: new field with the return type (maybe?)
        //	Types returnType = findReturnType(type)
        vl.add(new Semant.Absyn.VarDecl(type, name.image, init));
  }

  static final public Semant.Absyn.Type Type() throws ParseException {
 Semant.Absyn.Type t;
    if (jj_2_1(2147483647)) {
      t = ArrayType();
    } else if (jj_2_2(2147483647)) {
      t = BooleanType();
    } else if (jj_2_3(2147483647)) {
      t = IntegerType();
    } else if (jj_2_4(2147483647)) {
      t = IdentifierType();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
        {if (true) return t;}
    throw new Error("Missing return statement in function");
  }

// ArrayType(Type base)
  static final public Semant.Absyn.Type ArrayType() throws ParseException {
  Semant.Absyn.Type t;
    jj_consume_token(12);
    jj_consume_token(6);
    t = Type();
    jj_consume_token(7);
          {if (true) return new Semant.Absyn.ArrayType(t);}
    throw new Error("Missing return statement in function");
  }

// BooleanType() { }
  static final public Semant.Absyn.Type BooleanType() throws ParseException {
    jj_consume_token(17);
          {if (true) return new Semant.Absyn.BooleanType();}
    throw new Error("Missing return statement in function");
  }

// IntegerType() { }
  static final public Semant.Absyn.Type IntegerType() throws ParseException {
    jj_consume_token(31);
          {if (true) return new Semant.Absyn.IntegerType();}
    throw new Error("Missing return statement in function");
  }

// IdentifierType(String id)
  static final public Semant.Absyn.Type IdentifierType() throws ParseException {
  Token t;
    jj_consume_token(28);
    jj_consume_token(6);
    t = jj_consume_token(ID);
    jj_consume_token(7);
          {if (true) return new Semant.Absyn.IdentifierType(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public Semant.Absyn.Stmt Stmt() throws ParseException {
        Semant.Absyn.Stmt s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 14:
      s = AssignStmt();
      break;
    case 16:
      s = BlockStmt();
      break;
    case 29:
      s = IfStmt();
      break;
    case 54:
      s = XinuCallStmt();
      break;
    case 52:
      s = WhileStmt();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
     {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

//AssignStmt(AssignableExpr lhs, Expr rhs)
  static final public Semant.Absyn.Stmt AssignStmt() throws ParseException {
        Semant.Absyn.Expr lhs = null, rhs = null;
    jj_consume_token(14);
    jj_consume_token(6);
    lhs = Expr();
    rhs = Expr();
    jj_consume_token(7);
          {if (true) return new Semant.Absyn.AssignStmt((Semant.Absyn.AssignableExpr) lhs, rhs);}
    throw new Error("Missing return statement in function");
  }
